--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -62,8 +62,8 @@ forgejoDefaultServer = "https://v11.next.forgejo.org"
 
 [article]
   showDate = true
-  showViews = false
-  showLikes = false
+  showViews = true
+  showLikes = true
   showDateOnlyInArticle = false
   showDateUpdated = false
   showAuthor = true
@@ -177,3 +177,15 @@ forgejoDefaultServer = "https://v11.next.forgejo.org"
 
 [advertisement]
   # adsense = ""
+
+[comments]
+  # true or false
+  enabled = true
+  # "utterances", "disqus", "giscus"
+  provider = "giscus"
+  # blowfish uses the "session" theme by default
+  theme = "github-light"
+  # blowfish uses "github-dark" theme for dark mode
+  darkTheme = "github-dark"
+
+
