--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,11 @@
 extended = true
 min = "0.141.0"
 max = "0.148.2"
+hasCJKLanguage = true
+[languages]
+  [languages.zh]
+    # 你可能已经有的其他配置
+    languageCode = "zh-CN"
+    languageName = "中文"
+    weight = 1
+    hasCJKLanguage = true
