--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,11 @@ baseURL = ''
 languageCode = 'zh-cn'
 title = "Zixuan Zhu's profile"
 theme = "blowfish"
+
+[services]
+  [services.disqus]
+    shortname = 'zzxprofile'
+
+[params]
+  [params.comments]
+    provider = "cactus"
