--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -135,13 +135,13 @@ forgejoDefaultServer = "https://v11.next.forgejo.org"
   cardViewScreenWidth = false
 
 [firebase]
-  # apiKey = "XXXXXX"
-  # authDomain = "XXXXXX"
-  # projectId = "XXXXXX"
-  # storageBucket = "XXXXXX"
-  # messagingSenderId = "XXXXXX"
-  # appId = "XXXXXX"
-  # measurementId = "XXXXXX"
+  apiKey= "AIzaSyDoqvWmBzj4NGLUHEHYiJJnw3nP0Q2pVNc"
+  authDomain= "zzxprofile.firebaseapp.com"
+  projectId= "zzxprofile"
+  storageBucket= "zzxprofile.firebasestorage.app"
+  messagingSenderId= "613669194212"
+  appId= "1:613669194212:web:ca8aa589177455f1345ff1"
+  measurementId= "G-KFCJLLYFJQ"
 
 [fathomAnalytics]
   # site = "ABC12345"
@@ -192,5 +192,3 @@ forgejoDefaultServer = "https://v11.next.forgejo.org"
 [comments.disqus]
   # 请替换为您的 Disqus shortname
   shortname = "your-disqus-shortname"
-
-
