--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -15,7 +15,7 @@ enableCodeCopy = false
 
 replyByEmail = false
 
-# mainSections = ["section1", "section2"]
+mainSections = ["posts"] 
 # robots = ""
 
 disableImageOptimization = false
